--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ dependencies {
     
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile 'no.tornado:tornadofx:1.7.17'
 }
 
 compileKotlin {
