--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,9 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile 'no.tornado:tornadofx:1.7.17'
 //    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.0.1"
+    // https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine
+    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.3.2'
+
 
 }
     
